--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,3 +2,5 @@ add_sources(Main.cpp)
 add_sources(preprocessor.cpp)
 add_sources(compiler.cpp)
 add_sources(utils.cpp)
+
+add_test_sources(utils.cpp)
